Changes to Inge's and Nic's comments

--- a/index/08-chap8.Rmd
+++ b/index/08-chap8.Rmd
@@ -38,9 +38,9 @@ The two previous results chapters (Chapter \@ref(BMI-protein-MR) and Chapter \@r
 This overall shift in proteins in each study design provides important information. One of the benefits of having the same proteomics platform in both studies is that there is a large overlap in the number of proteins measured, therefore the MR estimate and RCT estimate can be directly compared. A comparison across the two studies also helps to overcome the biases and limitations of each approach, and both the concordance and divergence in effects across studies provides insight into possible mechanisms. The overall aim of this chapter is to compare BMI-protein effects across MR and RCT study designs and evaluate implications for platelet function and CVD.
 
 ## Methods
-In efforts to further elucidate which proteins are altered by adiposity, a comparison between the BMI-protein associations in INTERVAL (Chapter \@ref(BMI-protein-MR)) and the BMI change-protein change associations in Chapter \@ref(BMI-protein-RCT) was performed. There were 2803 unique proteins (by UniProt ID) which were detected in both INTERVAL and DiRECT. Estimates across the two cohorts were compared using linear regression. To be able to compare whether estimates were similar across study designs, estimates from each analysis were scaled using the scale() function from the "base" R package. This function subtracts the mean from each value and divides by the standard deviation. Estimates were categorised as: similar if the scaled estimates were within 1 SD of each other; different if estimates were more than 1 SD apart and extreme if within 1 SD of each other and with an absolute scaled estimate of more than 1 SD. 
+In efforts to further elucidate which proteins are altered by adiposity, a comparison between the BMI-protein associations in INTERVAL (Chapter \@ref(BMI-protein-MR)) and the BMI change-protein change associations in Chapter \@ref(BMI-protein-RCT) was performed. There were 2803 unique proteins (by UniProt ID) which were detected in both INTERVAL and DiRECT. Estimates across the two cohorts were compared using linear regression. To be able to compare whether estimates were similar across study designs, estimates from each analysis were scaled using the scale() function from the "base" R package. This function subtracts the mean from each value and divides by the standard deviation. Estimates were categorised as: "same" if the scaled estimates were within 1 SD of each other; "different" if estimates were more than 1 SD apart and "extreme" if within 1 SD of each other and with an absolute scaled estimate of more than 1 SD. Estimates from both studies were scaled as the beta coefficients for the regression analyses were using different units (INTERVAL units are SD difference in protein per SD higher BMI in a cross-sectional setting, whereas DiRECT is SD change in protein per SD increase in BMI).
 
-The benefits of this comparison is that it can compare estimates across studies which are measured using different units (INTERVAL units are SD difference in protein per SD higher BMI in a cross-sectional setting, whereas DiRECT is SD change in protein per SD increase in BMI). However, the thresholds set for this comparison are arbitrary, so the thresholds for what defines estimate as similar or different is user defined. The comparison may reflect important information regarding 
+The comparison of the magnitude of estimates across studies conveys important information. Firstly, proteins which have a consistent direction across both INTERVAL and DiRECT, as well as having large magnitudes of estimates in both studies provides more compelling evidence for a BMI-driven effect. Secondly, proteins which have consistent evidence across both studies but with small magnitudes of estimates provides evidence that the protein levels are not affected by BMI. The comparison can also highlight disparities in estimates: where there may be evidence from only one study that the protein is altered by BMI. This either points towards effects which are study specific, or possible spurious associations arising in one study. 
 
 Estimates for the specific proteins involved in platelet GO pathways highlighted in Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT) (Supplementary Table 1 https://github.com/lucygoudswaard/mythesis/blob/master/index/figure/BMI_protein_INTERVAL/BMI_protein_supplementary_Tables.xlsx) were also extracted to evaluate the effect of BMI on platelet proteins. Estimates were extracted from the MR in INTERVAL and for the two stage least squares analysis in DiRECT as these were the most robust models.
 
@@ -59,7 +59,7 @@ include_graphics(path = "figure/DiRECT/DiRECT_INTERVAL_comparison.pdf", dpi = NA
 ```
 \elandscape
 
-The divergence in magnitude of estimates across study designs also suggests that some proteins are only associated with BMI in one study design. For example, the estimates in INTERVAL suggested that BMI has an effect on complement factors such as Complement C5 and Complement Factor I. As seen in Figure \@ref(fig:DiRECT-INTERVAL-group), these complement factors as well as others group together, where they appear to have a relationship with BMI in INTERVAL but are not affected by weight loss in DiRECT. There are other proteins which show the opposite: SCAR5 and CHAD displayed strong associations with BMI change in DiRECT, however the MR did not detect a causal effect of BMI on levels of these proteins \@ref(fig:DiRECT-INTERVAL-group).
+The divergence in magnitude of estimates across study designs also suggests that some proteins are only associated with BMI in one study design. Divergence can be seen in Figure \@ref(fig:DiRECT-INTERVAL-group), where estimates around zero for the DiRECT estimate, but large magnitudes (either positive or negative) in INTERVAL indicates an effect specific to INTERVAL. Similarly, estimates around zero for the INTERVAL estimate but large magnitudes of estimate in DiRECT indicates a specific effect in DiRECT. By exploring the proteins in all four regions of this graph there are two groups which stand out. The first is a group of complement factors. For example, the estimates in INTERVAL suggested that BMI has an effect on complement factors such as Complement C5 and Complement Factor I. As seen in Figure \@ref(fig:DiRECT-INTERVAL-group), these complement factors as well as others such as Complement Factor 5a group together, where they appear to have a relationship with BMI in INTERVAL but are not affected by weight loss in DiRECT. There are other proteins which show the opposite: SCAR5 and CHAD displayed strong associations with BMI change in DiRECT, however the MR did not detect a causal effect of BMI on levels of these proteins \@ref(fig:DiRECT-INTERVAL-group). There was no clear other grouping of proteins.
 
 \blandscape
 (ref:scaption-DiRECT-INTERVAL-group) Scatter plot comparing the two stage least squares estimate for the effect of BMI change on protein change in DiRECT with the Mendelian randomisation estimate for the effect of BMI on protein levels in INTERVAL, with proteins that differ across models highlighted
@@ -71,10 +71,10 @@ include_graphics(path = "figure/DiRECT/DiRECT_INTERVAL_comparison_groups.png", d
 
 Across both INTERVAL and DiRECT, 170 proteins involved in platelet GO pathways were detected. The comparison of estimates for these proteins is shown in Figure \@ref(fig:DiRECT-INTERVAL-platelet), with categorisation of whether the estimates were different, the same or extreme based on the distribution of the 170 scaled estimates from both study designs. Overall, the estimates were associated with each other (R^2^=0.19, p=1.1x10^-9^), which was a stronger association than that seen for all proteins in Figure \@ref(fig:DiRECT-INTERVAL-group). However, there were divergences in estimates for some proteins. Thirteen proteins were categorised as extreme (similar with large estimates), with 102 categorised as the same and 55 as different. Proteins which had consistent evidence across study designs, with the greatest magnitude of estimates include PAFAH, PAI-1 and Complement Factor B. PAFAH was associated with BMI in the observational analysis in INTERVAL. However, PAFAH did not pass multiple testing in the MR analysis. Despite this, the estimate was similar in magnitude to the observational estimate. PAFAH was also associated with BMI change in DiRECT in the instrumental variable analysis. The direction of the effect indicated that higher BMI is associated with a reduction in circulating PAFAH. In agreement with this, a reduction in BMI lead to higher levels of PAFAH. The estimates for PAFAH were similar in Figure \@ref(fig:DiRECT-INTERVAL-platelet). The consistencies in magnitude and direction of estimates for the platelet proteins highlighted in green, in particular PAFAH, PAI-1 and complement factor B suggest that platelet proteome alterations due to variation in BMI likely has downstream effects on the platelet environment.
 
-(ref:scaption-DiRECT-INTERVAL-platelet) Scatter plot of the two stage least squares estimate in DiRECT and the Mendelian Randomisation estimates in INTERVAL and the for the effect of BMI on proteins involved in platelet pathways
-(ref:caption-DiRECT-INTERVAL-platelet) **Scatter plot of the two stage least squares estimate in DiRECT and the Mendelian Randomisation estimates in INTERVAL and the for the effect of BMI on proteins involved in platelet GO pathways**.
-```{r DiRECT-INTERVAL-platelet, echo = FALSE, out.width="90%", fig.cap="(ref:caption-DiRECT-INTERVAL-platelet)", fig.align = "center", fig.scap= "(ref:scaption-DiRECT-INTERVAL-platelet)"}
-include_graphics(path = "figure/DiRECT/Comparison_scatter_platelet_proteins_coloured.pdf", dpi = NA)
+(ref:scaption-DiRECT-INTERVAL-platelet) Scatter plot of the two stage least squares estimate in DiRECT and the Mendelian Randomisation estimates in INTERVAL highlighting proteins involved in platelet gene ontology (GO) pathways
+(ref:caption-DiRECT-INTERVAL-platelet) **Scatter plot of the two stage least squares estimate in DiRECT and the Mendelian Randomisation estimates in INTERVAL highlighting proteins involved in platelet GO pathways**. Estimates that are similar across analyses with a large effect size in both studies (within 1 SD of each other and with an absolute scaled estimate of more than 1 SD) are coloured in green, whereas those which display similar estimates across studies with small effect size (scaled estimates were within 1 SD of each other) are shown in blue. Proteins that do not show similar effects across studies (more than 1 SD apart) are shown in pink. A linear regression line is indicated in blue. A) Scatter plot of all proteins with platelet proteins coloured in purple. B) The scatter plot restricted to platelet proteins only (purple points in A). 
+```{r DiRECT-INTERVAL-platelet, echo = FALSE, out.width="110%", fig.cap="(ref:caption-DiRECT-INTERVAL-platelet)", fig.align = "center", fig.scap= "(ref:scaption-DiRECT-INTERVAL-platelet)"}
+include_graphics(path = "figure/DiRECT/All_protein_platelet.pdf", dpi = NA)
 ```
 
 ## Discussion
@@ -86,6 +86,6 @@ Overall, estimates for the effect of BMI on platelet proteins in DiRECT and INTE
 
 Divergence in estimates across study designs may also suggest that there are spurious relationships occurring. However, this divergence may also provide some insight into the biology due to the nature of each study design. In general, the MR study design provides insight into the effect on the proteome that a sustained high BMI has over the life course and is therefore indicative of chronic effects. In contrast, the estimates in DiRECT are the effect that acute weight loss (1 year) and T2D remission has on the proteome. Complement factors may be altered in the MR study, but not after a weight loss intervention because weight loss may not have been sustained long enough to induce changes at the proteome level. There was no evidence for a causal relationship between BMI and both SCAR5 and CHAD in the MR, but these proteins displayed strong associations with weight loss in DiRECT. This could be because these protein changes are signals of starvation or due to other changes that happen with caloric restriction, such as a change of medication, T2D remission or loss of muscle mass. This requires further exploration, and requires more formal analysis to disentangle effects.
 
-One of the limitations of the analyses performed in Chapter \@ref(BMI-protein-MR) and Chapter \@ref(BMI-protein-RCT) is that many proteins are not in the SOMAscan in both studies. Out of 4,034 SOMAmers in INTERVAL and 4601 SOMAmers in DiRECT, there were 2803 proteins in both. This means that there would be other proteins which would likely have reproducible effects across study (such as leptin). Therefore, this is limiting which proteins are discussed in the current chapter.
+One of the limitations of the analyses performed in Chapter \@ref(BMI-protein-MR) and Chapter \@ref(BMI-protein-RCT) is that many proteins are not in the SOMAscan in both studies. Out of 4,034 SOMAmers in INTERVAL and 4601 SOMAmers in DiRECT, there were 2803 proteins in both. This means that there would be other proteins which would likely have reproducible effects across study (such as leptin). Therefore, this is limiting which proteins are discussed in the current chapter. Another limitation of the current chapter is that the thresholds set for this comparison are arbitrary, so the thresholds for what defines estimate as similar or different is user defined. However, in the absence of other ways to compare units which lie on different scales, this was the most systematic way to do so.
 
 Overall, this chapter brought together two different study designs which aimed to determine the effect of adiposity on the plasma proteome. Through directly comparing the magnitude of estimates, this chapter identifies proteins which have the strongest evidence for a BMI effect (SHBG, IGFBP1/2, GHR, FAAA), as well as identifying a role of BMI in levels of circulating PAFAH, which may have implications for atherosclerosis. Divergence in estimates indicates effects which may be specific to one study design such as a causal effect of BMI on complement factors in the MR, but the inability to reverse these effects with weight loss. Replicating in other cohorts is now required to further understand these relationships.
